--- a/style.css
+++ b/style.css
@@ -512,7 +512,7 @@ width: 95%;
     background-size: cover;
     background-position: left;
    
-    color:#4b4c4d;
+    color:#ccced0;
   }
   
   .footer-basic ul {
@@ -548,10 +548,11 @@ width: 95%;
     width:40px;
     height:40px;
     line-height:40px;
+  color: #aaa;
     display:inline-block;
     text-align:center;
     border-radius:50%;
-    border:1px solid #ccc;
+    
     margin:0 8px;
     color:inherit;
     opacity:0.75;
