--- a/css/about.css
+++ b/css/about.css
@@ -29,7 +29,26 @@ body{
  color: white;
   
 }
+.nav{
+  position: fixed;
+  width: 100%;
+  z-index: 2;
+display: flex;
+height: 50px;
+align-items: center;
+justify-content: center;
+padding: 0 20px;
+background-color: rgba(0,0,0,0.685);
+backdrop-filter: blur(20px);
 
+}
+.nav a{
+  color: white;
+  list-style: none;
+  text-decoration: none;
+  margin-left: 25px;
+  font-size: 17px;
+}
 
 .section2{
     display: flex;
